# filter-test

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  linear_filter.cc
csv/: emboss.csv  gaussian.csv  laplace.csv  large_emboss.csv
